manifests/app/dreamkast/overlays/development/dk-1167/deployment-fifo-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dreamkast
    tier: dreamkast-fifo-worker
  name: dreamkast-fifo-worker
spec:
  selector:
    matchLabels:
      app: dreamkast
      tier: dreamkast-fifo-worker
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dreamkast
        tier: dreamkast-fifo-worker
    spec:
      containers:
      - args:
        - exec
        - rake
        - aws_sqs:fifo_job
        command:
        - bundle
        image: 607167088920.dkr.ecr.ap-northeast-1.amazonaws.com/dreamkast-ecs:main
        imagePullPolicy: Always
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sleep
              - "300"
        name: dreamkast
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 400m
            memory: 256Mi
